--- a/views/create-admin-notice.ejs
+++ b/views/create-admin-notice.ejs
@@ -2,49 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Sign In</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
+    <title>create notice</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-      
+      .jumbotron{
+        background-image: linear-gradient(67.5deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(135deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(0deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(8, 8, 8),rgb(221, 221, 221)); background-blend-mode:overlay,overlay,overlay,overlay,normal;
+      }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-inverse">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Welcome</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <!-- <li ><a href="Final_bootstrap.html">Landing Page</a></li> -->
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Name</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="/student/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/admin/login">admin</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
-    <div class="container">
-      <div class="jumbotron">
+    <div class="jumbotron">
+      <div class="container text-light">
         <h1>create Notice</h1>
         <h4>Enter your correct details to register</h4>
       </div>
+      </div>
+      <div class="container">
       <form method="POST" action="/admin/create/notice">
         <div class="form-group">
           <label for="title">title</label>
@@ -66,25 +57,33 @@
             placeholder="content"
           ></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group" id="target">
           <label for="course">target</label>
-          <select id="course" multiple name="course" class="form-control">
-            <option value='{"course":"btech","brach":"CSE","year":"1"}'>btech cse year 1</option>
-            <option value='{"course":"btech","brach":"CSE","year":"2"}'>btech cse year 2</option>
-            <option value='{"course":"btech","brach":"CSE","year":"3"}'>btech cse year 3</option>
-            <option value='{"course":"btech","brach":"CSE","year":"4"}'>btech cse year 4</option>
-            <option value='{"course":"btech","brach":"ECE","year":"1"}'>btech ece year 1</option>
-            <option value='{"course":"btech","brach":"ECE","year":"2"}'>btech ece year 2</option>
-            <option value='{"course":"btech","brach":"ECE","year":"3"}'>btech ece year 3</option>
-            <option value='{"course":"btech","brach":"ECE","year":"4"}'>btech ece year 4</option>
-            <option value='{"course":"btech","brach":"EEE","year":"1"}'>btech eee year 1</option>
-            <option value='{"course":"btech","brach":"EEE","year":"2"}'>btech eee year 2</option>
-            <option value='{"course":"btech","brach":"EEE","year":"3"}'>btech eee year 3</option>
-            <option value='{"course":"btech","brach":"EEE","year":"4"}'>btech eee year 4</option>
+          <button class="btn btn-outline-success" onclick="add()">+</button>
+          <br>
+          <br>
+          <select name="course">
+            <option value="0">all</option>
+            <option value="1">btech</option>
+            <option value="2">mtech</option>
+            
+        </select>
+          <select name="branch">
+            <option value="0">all</option>
+            <option value="1">ece</option>
+            <option value="2">cse</option>
+            
+        </select>
+          <select name="year">
+            <option value="0">all</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="3">4</option>
         </select>
         </div>
         <div class="form-group">
-          <label for="rolls">title</label>
+          <label for="rolls">rolls</label>
           <input
             type="text"
             class="form-control"
@@ -93,16 +92,37 @@
             name="rolls"
           />
         </div>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" name="all"/>all
-          </label>
-        </div>
-        <button type="register" class="btn btn-default">create new Notice</button>
+        <button type="register" class="btn btn-outline-success">create new Notice</button>
       </form>
+      
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script>
+        const target = document.querySelector('#target');
+        function add(){
+          target.innerHTML+=`<br>
+          <br>
+          <select name="course">
+            <option value="0">all</option>
+            <option value="1">btech</option>
+            <option value="2">mtech</option>
+            
+        </select>
+          <select name="branch">
+            <option value="0">all</option>
+            <option value="1">ece</option>
+            <option value="2">cse</option>
+            
+        </select>
+          <select name="year">
+            <option value="0">all</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="3">4</option>
+        </select>
+          `
+        }
       </script>
     </div>
   </body>
