--- a/views/student-home.ejs
+++ b/views/student-home.ejs
@@ -25,10 +25,13 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin/login">admin</a>
           </li>
+          <li class="nav-item">
+            <a href="/student/logout" class="btn btn-outline-danger">log out</a>
+          </li>
          
         </ul>
       </div>
-      <a href="/student/logout" class="btn btn-outline-danger">log out</a>
+      
     </nav>
 
     <div class="jumbotron">
