--- a/views/login-student.ejs
+++ b/views/login-student.ejs
@@ -42,6 +42,21 @@
       </div>
       </div>
       <div class="container">
+        <% if (locals.notLogged) { %>
+          <div class="alert alert-danger" role="alert">
+            you are not logged in login again
+          </div>
+          <% } %>
+          <% if (locals.checkpass) { %>
+          <div class="alert alert-danger" role="alert">
+            please check your roll and password again
+          </div>
+          <% } %>
+          <% if (locals.success) { %>
+          <div class="alert alert-success" role="alert">
+            your acc has been created plz login to continue
+          </div>
+          <% } %>
       <form method="POST" action="/student/login">
   <div class="form-group">
     <label for="roll">roll</label>
